--- a/Src/Exchange.DkimVerificator/packages.config
+++ b/Src/Exchange.DkimVerificator/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MimeKit" version="1.2.21" targetFramework="net40" />
+  <package id="BouncyCastle" version="1.8.1" targetFramework="net40" />
+  <package id="MimeKit" version="1.10.0" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
 </packages>
