--- a/Src/Exchange.DkimSigner/Exchange.DkimSigner.csproj
+++ b/Src/Exchange.DkimSigner/Exchange.DkimSigner.csproj
@@ -250,6 +250,15 @@
 		<ErrorReport>prompt</ErrorReport>
 		<CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
 	</PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Ex2013 SP1 CU16|AnyCPU'">
+		<OutputPath>bin\Exchange 2013 SP1 CU16\</OutputPath>
+		<DefineConstants>TRACE;EX_2013_SP1_CU16</DefineConstants>
+		<Optimize>true</Optimize>
+		<DebugType>pdbonly</DebugType>
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<ErrorReport>prompt</ErrorReport>
+		<CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+	</PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Ex2016 Preview|AnyCPU'">
     <OutputPath>bin\Exchange 2016 Preview\</OutputPath>
     <DefineConstants>TRACE;EX_2016_PREV</DefineConstants>
@@ -472,6 +481,12 @@
 		</Reference>
 		<Reference Include="Microsoft.Exchange.Data.Transport" Condition="'$(Configuration)'=='Ex2013 SP1 CU15'">
 			<HintPath>..\..\Lib\Exchange 2013 SP1 CU15\Microsoft.Exchange.Data.Transport.dll</HintPath>
+		</Reference>
+		<Reference Include="Microsoft.Exchange.Data.Common" Condition="'$(Configuration)'=='Ex2013 SP1 CU16'">
+			<HintPath>..\..\Lib\Exchange 2013 SP1 CU16\Microsoft.Exchange.Data.Common.dll</HintPath>
+		</Reference>
+		<Reference Include="Microsoft.Exchange.Data.Transport" Condition="'$(Configuration)'=='Ex2013 SP1 CU16'">
+			<HintPath>..\..\Lib\Exchange 2013 SP1 CU16\Microsoft.Exchange.Data.Transport.dll</HintPath>
 		</Reference>
     <Reference Include="Microsoft.Exchange.Data.Common" Condition="'$(Configuration)'=='Ex2016 Preview'">
       <HintPath>..\..\Lib\Exchange 2016 Preview\Microsoft.Exchange.Data.Common.dll</HintPath>
